# CKFontEditor

./: .gitmodules  CMakeLists.txt  README.md  appmodel.cpp  appmodel.h  flowlayout.cpp  flowlayout.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pch.h
component/: canvas.cpp  canvas.h  font_item.cpp  font_item.h  mydrawer.cpp  mydrawer.h
control/: color_button.cpp  color_button.h  font_list_widget.cpp  font_list_widget.h
dialog/: dlg_about.cpp  dlg_about.h  dlg_about.ui  dlg_add.cpp  dlg_add.h  dlg_add.ui  dlg_compress.cpp  dlg_compress.h  dlg_compress.ui  dlg_import_bmfont.cpp  dlg_import_bmfont.h  dlg_import_bmfont.ui  dlg_info.cpp  dlg_info.h  dlg_info.ui  dlg_preview.cpp  dlg_preview.h  dlg_preview.ui  dlg_texture.cpp  dlg_texture.h  dlg_texture.ui
test/: test.ckf  宋体32.fnt
translations/: ckfonteditor_en_us.ts
